I increased the value of padding and change the flex-direction value into row

--- a/responsive-news-site/webroot/css/section_featured.css
+++ b/responsive-news-site/webroot/css/section_featured.css
@@ -1,6 +1,5 @@
 #section_featured article {
-  padding-block-start: 2.5rem;
-  padding-block-end: 2.5rem;
+  padding: 4.5rem;
 }
 
 #section_featured .category {
