I set padding and used display grid

--- a/responsive-news-site/webroot/css/section_more_news.css
+++ b/responsive-news-site/webroot/css/section_more_news.css
@@ -1,5 +1,8 @@
 #section_more_news {
   background-color: #fff;
+  padding-inline-start: 4.5rem;
+  padding-inline-end: 4.5rem;
+  padding-block-end: 4.5rem;
 }
 
 #section_more_news > header {
