--- a/responsive-news-site/webroot/css/section_trending.css
+++ b/responsive-news-site/webroot/css/section_trending.css
@@ -1,3 +1,28 @@
+#section_trending {
+  display:grid;
+  column-gap: 3rem;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-areas: "header header"
+                       "first-swatch second-swatch"
+                       "first-swatch second-swatch"
+                       "first-swatch second-swatch";
+  padding-inline-start: 4.5rem;
+  padding-inline-end: 4.5rem;
+  padding-block-end: 4.5rem;
+}
+#section_trending > header {
+  grid-area: header;
+}
+#section_trending > .article_swatch:first-of-type {
+  grid-area: first-swatch;
+}
+#section_trending > .article_swatch:last-of-type {
+  grid-area: second-swatch;
+}
+
 #section_trending article {
   background-color: #fff;
+}
+.article_swatch:nth-of-type(2) ~ article {
+  display: none;
 }
