--- a/responsive-news-site/webroot/css/site_nav.css
+++ b/responsive-news-site/webroot/css/site_nav.css
@@ -1,3 +1,4 @@
+
 body > nav {
   padding: 1rem;
   background-color: #f8f8f8;
@@ -53,7 +54,7 @@ body > nav > h2 > label {
 body > nav > ul {
   list-style: none;
   display: flex;
-  flex-direction: column;
+/*  flex-direction: column;*/
 }
 
 body > nav > ul a {
@@ -100,7 +101,7 @@ body > nav > ul a:hover {
   display: block;
 }
 
-/* Tablet */
+
 @media (min-width: 768px) {
   body > nav {
     padding: 0;
@@ -115,7 +116,7 @@ body > nav > ul a:hover {
     transition: none
   }
 
-  /* Switch from column to row flex */
+Switch from column to row flex
   body > nav > ul {
     flex-direction: row;
   }
