--- a/responsive-news-site/webroot/css/section_happening_now.css
+++ b/responsive-news-site/webroot/css/section_happening_now.css
@@ -1,11 +1,10 @@
+@media (min-width: 768px) {
 #section_happening_now {
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 2rem;
   margin-block-start: -2.5rem;
-  padding-inline-start: 4.5rem;
-  padding-inline-end: 4.5rem;
-  padding-block-end: 4.5rem;
+  padding: 4.5rem;
 
 }
 .heading_section {
@@ -36,7 +35,7 @@
 #section_happening_now > .article_card + .article_card + .article_simple + .article_simple ~ .article_simple {
   display: none;
 }
-
+}
 
 #section_happening_now .article_card {
   border-radius: 0.375rem;
