--- a/responsive-news-site/webroot/css/section_trending.css
+++ b/responsive-news-site/webroot/css/section_trending.css
@@ -1,3 +1,4 @@
+@media (min-width: 768px) {
 #section_trending {
   display:grid;
   column-gap: 2rem;
@@ -19,10 +20,12 @@
 #section_trending > .article_swatch:last-of-type {
   grid-area: second-swatch;
 }
+.article_swatch:nth-of-type(2) ~ article {
+    display: none;
+  }
 
+
+}
 #section_trending article {
   background-color: #fff;
-}
-.article_swatch:nth-of-type(2) ~ article {
-  display: none;
 }
