I fixed some codes

--- a/responsive-news-site/webroot/css/section_trending.css
+++ b/responsive-news-site/webroot/css/section_trending.css
@@ -20,7 +20,7 @@
 #section_trending > .article_swatch:last-of-type {
   grid-area: second-swatch;
 }
-.article_swatch:nth-of-type(2) ~ article {
+s.article_swatch:nth-of-type(2) ~ article {
     display: none;
   }
 
