--- a/responsive-news-site/webroot/css/section_happening_now.css
+++ b/responsive-news-site/webroot/css/section_happening_now.css
@@ -1,42 +1,3 @@
-@media (min-width: 768px) {
-#section_happening_now {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  column-gap: 2rem;
-  margin-block-start: -2.5rem;
-  padding: 4.5rem;
-
-}
-#section_happening_now > header {
-  grid-column-start: 1;
-  grid-column-end: 3;
-}
-.article_card:first-of-type {
-  grid-column-start: 1;
-  grid-column-end: 3;
-}
-.article_card:nth-of-type(2) {
-  grid-column-start: 1;
-  grid-column-end: 3;
-}
-/*.article_simple {
-  grid-column-start: 1;
-  grid-column-end: 3;
-}
-.article_simple:first-of-type {
-  grid-column-start: 1;
-  grid-column-end: 2;
-}
-.article_simple:nth-of-type(2) {
-  grid-column-start: 2;
-  grid-column-end: 3;
-}*/
-
-#section_happening_now > .article_card + .article_card + .article_simple + .article_simple ~ .article_simple {
-  display: none;
-}
-}
-
 #section_happening_now .article_card {
   border-radius: 0.375rem;
   margin-block-end: 2.5rem;
@@ -48,4 +9,73 @@
   height: 0;
   border-block-start: 2px solid #EBEDED;
   padding-block-start: 2.5rem;
+}
+/* Tablet*/
+@media (min-width: 768px) {
+  #section_happening_now {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 2rem;
+    margin-block-start: -2.5rem;
+    padding: 4.5rem;
+
+  }
+  #section_happening_now > header {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+  .article_card:first-of-type {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+  .article_card:nth-of-type(2) {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+  .article_simple:first-of-type {
+    grid-column-start: 1;
+    grid-column-end: 2;
+  }
+  .article_simple:nth-of-type(2) {
+    grid-column-start: 2;
+    grid-column-end: 3;
+  }
+
+  #section_happening_now > .article_card + .article_card + .article_simple + .article_simple ~ .article_simple {
+    display: none;
+  }
+  }
+@media (min-width: 1040px) {
+  #section_happening_now {
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas: "header header header"
+                         "first-article-card first-article-card first-article-simple"
+                         "first-article-card first-article-card first-article-simple"
+                         "first-article-card first-article-card second-article-simple"
+                         "second-article-card second-article-card second-article-simple"
+                         "second-article-card second-article-card third-article-simple"
+                         "second-article-card second-article-card third-article-simple";
+
+
+  }
+  #section_happening_now > header {
+    grid-area: header;
+  }
+  #section_happening_now .article_card:first-of-type {
+  grid-area: first-article-card;
+  }
+  #section_happening_now .article_card:nth-of-type(2) {
+    grid-area: second-article-card;
+  }
+  #section_happening_now .article_simple:nth-of-type(1) {
+    grid-area: first-article-simple;
+  }
+  #section_happening_now .article_simple:nth-of-type(2) {
+    grid-area: second-article-simple;
+  }
+
+  #section_happening_now > .article_card + .article_card + .article_simple + .article_simple ~ .article_simple {
+    display: flex;
+}
 }
