--- a/responsive-news-site/webroot/css/fonts.css
+++ b/responsive-news-site/webroot/css/fonts.css
@@ -2,15 +2,28 @@
     font-style: normal;
     font-family: "Roboto";
     font-weight: 700;
-    src: url('../fonts/roboto-bold.woff2') format('woff2'),
+    src: local("Roboto-Bold"),
+         local("Roboto-Bold"),
+         url('../fonts/roboto-bold.woff2') format('woff2'),
          url('../fonts/roboto-bold.woff') format('woff');
   }
-  
+
+@font-face {
+    font-style: normal;
+    font-family: "Roboto";
+    font-weight: 400;
+    src: local("Roboto-Regular"),
+         local("Roboto-Regular"),
+         url('../fonts/roboto-regular.woff2') format('woff2'),
+         url('../fonts/roboto-regular.woff') format('woff');
+  }
+
   @font-face {
     font-style: normal;
     font-family: "Roboto";
     font-weight: 400;
-    src: url('../fonts/roboto-regular.woff2') format('woff2'),
-         url('../fonts/roboto-regular.woff') format('woff');
+    src: local("Roboto-Italic"),
+         local("Roboto-Italic"),
+         url('../fonts/roboto-italic.woff2') format('woff2'),
+         url('../fonts/roboto-italic.woff') format('woff');
   }
-  
