--- a/responsive-news-site/webroot/css/section_trending.css
+++ b/responsive-news-site/webroot/css/section_trending.css
@@ -29,8 +29,9 @@
 #section_trending article {
   background-color: #fff;
 }
+/*desktop*/
 @media (min-width: 1040px) {
-  #section_trending {
+#section_trending {
     display:grid;
     column-gap: 2rem;
     grid-template-columns: repeat(3, 1fr);
